# ARQUITECTURA

./: .gitignore  README.md
src/: .clang-tidy  CMakeLists.txt  build.sh
src/common/: AVLTree.cpp  AVLTree.hpp  CMakeLists.txt  binario.cpp  binario.hpp  ejemplos.txt  mtdata.cpp  mtdata.hpp  progargs.cpp  progargs.hpp  struct-rgb.cpp  struct-rgb.hpp
src/data/export/: recover.cpp
src/ftest/: README.md  ftest.py  ftest.sh  recover.cpp
src/ftest-aos/: ftest-aos.py
src/imgaos/: CMakeLists.txt  imageaos.cpp  imageaos.hpp  nuestro_maxlevel.txt
src/imgsoa/: CMakeLists.txt  imagesoa.cpp  imagesoa.hpp
src/imtool-aos/: main.cpp
src/imtool-soa/: CMakeLists.txt  main.cpp
src/utest-common/: AVLTree_test.cpp  CMakeLists.txt  binario_test.cpp  progargs_test.cpp  struct-rgb_test.cpp
src/utest-imgaos/: CMakeLists.txt  imageaos_test.cpp  one_test.cpp
src/utest-imgsoa/: CMakeLists.txt  imagesoa_test.cpp
